// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple entities GET /terms when all of the entities are published should fetch multiple entities of type term 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple entities GET /terms when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple entities GET /vocabularyLists when all of the entities are published should fetch multiple entities of type vocabularyList 1`] = `
Array [
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "1",
          "term": "Chil-term-1",
          "termEnglish": "Engl-term-1",
        },
        "variableValues": Object {
          "person": "11",
        },
      },
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "21",
        },
      },
    ],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "23",
        },
      },
    ],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;

exports[`When fetching multiple entities GET /vocabularyLists when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;
